--- a/package.json
+++ b/package.json
@@ -16,10 +16,13 @@
     "@mui/icons-material": "^6.1.10",
     "@mui/lab": "^6.0.0-beta.18",
     "@mui/material": "^6.1.10",
+    "axios": "^1.10.0",
     "babel-plugin-transform-remove-console": "^6.9.4",
+    "framer-motion": "^12.23.0",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
-    "react-router-dom": "^7.0.2"
+    "react-router-dom": "^7.0.2",
+    "swiper": "^9.4.1"
   },
   "devDependencies": {
     "@eslint/js": "^9.15.0",
